scripts/nullaway/annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8.txt
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightClient.java:15: error: [NullAway] dereferenced expression character is @Nullable
			character.printCharacter();
			         ^
    (see http://t.uber.com/nullaway )
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/abstractFactory/AbstractFactoryClient.java:11: error: [NullAway] dereferenced expression af is @Nullable
		AbstractProductA product = af.createProductA();
		                             ^
    (see http://t.uber.com/nullaway )
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/PieBuilder.java:5: error: [NullAway] @NonNull field pie not initialized
	private Pie pie;
	            ^
    (see http://t.uber.com/nullaway )
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/PieBuilder.java:19: error: [NullAway] dereferenced expression pie.getDough() is @Nullable
		if(pie.getDough().isEmpty()) {
		                 ^
    (see http://t.uber.com/nullaway )
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/PieBuilder.java:23: error: [NullAway] dereferenced expression pie.getFilling() is @Nullable
		if (pie.getFilling().isEmpty()) {
		                    ^
    (see http://t.uber.com/nullaway )
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Cook.java:5: error: [NullAway] @NonNull field pb not initialized
	private PieBuilder pb;
	                   ^
    (see http://t.uber.com/nullaway )
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Cook.java:35: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/command/CommandCenter.java:11: error: [NullAway] dereferenced expression command is @Nullable
		command.execute();
		       ^
    (see http://t.uber.com/nullaway )
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/memento/Originator.java:20: error: [NullAway] dereferenced expression memento is @Nullable
        this.state = memento.getState();
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/state/StateContext.java:15: error: [NullAway] dereferenced expression myState is @Nullable
        myState.writeName(this, name);
               ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightFactory.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
10 errors
